--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0 15%;
+  margin: 0 14%;
 }
 
 img {
@@ -52,7 +52,6 @@ main {
   font-family: 'Amiri', serif;;
   line-height: 28px;
   font-size: 32px;
-
 }
 
 .columna-izquierda .parte-superior hr{
@@ -87,12 +86,23 @@ main {
   grid-column: 3 / 16;
   display: grid;
   grid-template-columns: 1fr;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+  margin-left: 8px;
+  padding: 0 8px;
 }
 
-.columna-derecha article:nth-of-type(1) {
-  background-color: blue;
+.obama-notice {
+  border-bottom: 2px solid black;
+}
+
+.obama-notice h2 {
+  font-size: 15px;
+  margin: 3px 0;
+}
+
+.obama-notice p {
+  margin: 7px 0;
 }
 
 .columna-derecha article:nth-of-type(2) {
